--- a/scripts/todolist-deployments.yml
+++ b/scripts/todolist-deployments.yml
@@ -11,6 +11,7 @@ spec:
     matchLabels:
       app: todolist
       role: backend
+      azure.workload.identity/use: "true"
   strategy:
     rollingUpdate:
       maxSurge: 1
@@ -18,9 +19,12 @@ spec:
   minReadySeconds: 5
   template:
     metadata:
+      annotations:
+        prometheus.io/scrape: "true"
       labels:
         app: todolist
         role: backend
+        azure.workload.identity/use: "true"
     spec:
       serviceAccountName: todo-sa
       topologySpreadConstraints:
@@ -106,6 +110,7 @@ spec:
     matchLabels:
      app: todolist
      role: frontend
+     azure.workload.identity/use: "true"
   strategy:
     rollingUpdate:
       maxSurge: 1
@@ -113,9 +118,12 @@ spec:
   minReadySeconds: 5 
   template:
     metadata:
+      annotations:
+        prometheus.io/scrape: "true"
       labels:
         app: todolist
         role: frontend
+        azure.workload.identity/use: "true"
     spec:
       serviceAccountName: todo-sa
       topologySpreadConstraints:
